fix(css): stray semi-colon left at end of file
It boggles my mind that this isn't detected as an error within my
IDE; it took me way too long to figure this out.

--- a/src/components/styles/page-footer.css
+++ b/src/components/styles/page-footer.css
@@ -72,7 +72,7 @@
     transition      : color .3s, border .3s; }
   .pg-footer__copyright a:hover {
     border-color : var(--footer-copyright-link-hov-c);
-    color        : var(--footer-copyright-link-hov-c); };
+    color        : var(--footer-copyright-link-hov-c); }
 
 
 
